--- a/source/localizable/derivatives/contract.html.erb
+++ b/source/localizable/derivatives/contract.html.erb
@@ -2,7 +2,7 @@
 title: Bybit API Docs
 
 logo:
-  link: https://bybit-exchange.github.io/docs-legacy/derivatives/contract
+  link: https://mufex-exchange.github.io/docs-legacy/derivatives/contract
   target: _self
 
 
