--- a/source/localizable/derivatives/contract.html.erb
+++ b/source/localizable/derivatives/contract.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Bybit API Docs
+title: Mufex API Docs
 
 logo:
   link: https://mufex-exchange.github.io/docs-legacy/derivatives/contract
